[package]
name = "my-app"
version = "0.1.0"
edition = "2024"
authors = ["Chris Engelhard <chris@chrisengelhard.nl>"]
description = "My Rust App"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.35.1"
regex = "1.0"
nix = "0.30.1"
serde_json = "1.0.140"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
